Colaboratory を使用して作成しました

--- a/learnreact.ipynb
+++ b/learnreact.ipynb
@@ -6,7 +6,7 @@
       "name": "learnreact.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMxgTKyXtxHddmQHudTf7V/",
+      "authorship_tag": "ABX9TyOiEmfasxCUWT8J1K5GagD8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,15 +31,36 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# メモ\n",
-        "react本家チュートリアル https://ja.reactjs.org/tutorial/tutorial.html  \n",
-        "TypeScriptでReactに入門するチュートリアル https://qiita.com/yonetty/items/012be4c5c6258a609e35  \n",
-        "Reactの初期ページをGitHub Pagesで公開(デプロイ)する方法  \n",
-        "Create React Appで作成したアプリをgithubで公開する【npm gh-pages】"
+        "# メモ"
       ],
       "metadata": {
         "id": "33yy7JdpxGYL"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "react本家チュートリアル https://ja.reactjs.org/tutorial/tutorial.html  \n",
+        "TypeScriptでReactに入門するチュートリアル https://qiita.com/yonetty/items/012be4c5c6258a609e35  \n",
+        "Create React Appで作成したアプリをgithubで公開する【npm gh-pages】  \n",
+        "Reactの初期ページをGitHub Pagesで公開(デプロイ)する方法  "
+      ],
+      "metadata": {
+        "id": "7lBMrG07nG4m"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 目的はアイデアを形にして公開すること\n",
+        "# typescrpt で書いて react でアプリにして github で公開する方法を探る"
+      ],
+      "metadata": {
+        "id": "SZvaDBRFnJMC"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -156,7 +177,17 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# 考え方\n",
+        "# npx create-react-app react-app-dir とかでローカルで雛形を作る、もしくは git clone する\n",
+        "# github にリポジトリを作り紐づける、既にあれば git clone する\n",
+        "# npm run build <= これは deploy 時に実行するのでここでは不要かも\n",
+        "# npm run add gh-pages\n",
+        "# package.jsonを編集\n",
+        "# \"homepage\"と\"scripts\"配下の\"deploy\"を追加する\n",
+        "# \"homepage\": \"https://[githubのアカウント名].github.io/[リポジトリ名]\", <= カンマを忘れないこと\n",
+        "# \"deploy\": npm run build && gh-pages -d build\", <= カンマを忘れないこと\n",
+        "# npm run deploy\n",
+        "# 後始末: ローカルの内容を github で見れるようにするため git add . git commit git push しておく"
       ],
       "metadata": {
         "id": "pDoyoDY4XVTZ"
