Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNPNAUVCbY5I8UgiceKYGe1",
+      "authorship_tag": "ABX9TyPc119tU+5VsJBzYMrPTX/B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -392,11 +392,11 @@
         "console.log(checkGuess(3,4));"
       ],
       "metadata": {
-        "id": "gmUtaAKN6fBA",
-        "outputId": "fae43c17-cc08-487d-97b6-d48348881afe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "gmUtaAKN6fBA",
+        "outputId": "fae43c17-cc08-487d-97b6-d48348881afe"
       },
       "execution_count": 17,
       "outputs": [
@@ -415,11 +415,11 @@
         "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
-        "id": "OpKcoVdb6owE",
-        "outputId": "64ebc132-3eed-411a-f4ef-753df980b07c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OpKcoVdb6owE",
+        "outputId": "64ebc132-3eed-411a-f4ef-753df980b07c"
       },
       "execution_count": 18,
       "outputs": [
@@ -486,15 +486,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "ZgmNk0YN7pds"
-      }
     },
     {
       "cell_type": "code",
@@ -603,15 +594,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "JLWMC5ZJXumm"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "Gh_XIzVG-I3i",
@@ -670,7 +652,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "43ace176-5b22-46df-f712-4b8f6d673ba4"
+        "outputId": "280d24f4-507d-4097-cd8c-dd0dae36afeb"
       },
       "source": [
         "# map 多重配列\n",
@@ -680,7 +662,7 @@
         "let b = Array(3).map(x => Array(2).fill(0))  // Array(3) の後の fill(0) がないと空になってしまう\n",
         "console.log(b)"
       ],
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,18 +680,19 @@
       ],
       "metadata": {
         "id": "2v3F4l4T6dHF",
-        "outputId": "1012d8fa-30cc-40f2-d825-e2e8e43046fa",
+        "outputId": "2d59d6bc-9065-49d7-defa-c4d3c251843d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "[ [ \u001b[33m0\u001b[39m, \u001b[33m0\u001b[39m ], [ \u001b[33m0\u001b[39m, \u001b[33m0\u001b[39m ], [ \u001b[33m0\u001b[39m, \u001b[33m0\u001b[39m ] ]\n",
+            "[ \u001b[90m<3 empty items>\u001b[39m ]\n",
             "[ \u001b[90m<3 empty items>\u001b[39m ]\n"
           ]
         }
@@ -735,12 +718,12 @@
       ],
       "metadata": {
         "id": "qaGaLLw7IXG6",
-        "outputId": "690926d8-9018-42d1-cfac-5f9db7075978",
+        "outputId": "681f3c31-3113-42a4-e414-f13095ff5591",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -754,39 +737,16 @@
     {
       "cell_type": "code",
       "source": [
-        "!ls"
-      ],
-      "metadata": {
-        "id": "jjomwwpCjsFh",
-        "outputId": "f4eaf944-28b5-4375-a8eb-0eaa0c0aa3f6",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "node_modules  package-lock.json  sample_data  temp.js  temp.ts\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "!tsc temp.ts; node temp.js "
       ],
       "metadata": {
         "id": "baDa8cKD7kb1",
-        "outputId": "084fb9ba-66bb-4dbd-b0d8-4f5e4dc020ec",
+        "outputId": "72412828-95d3-47ed-a7c4-e20d79780667",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -807,7 +767,6 @@
         "# インクリメント・デクリメント\n",
         "%%writefile temp.ts\n",
         "let num = 3\n",
-        "\n",
         "console.log(num); //=> 3\n",
         "console.log(num++); //=> 3\n",
         "console.log(num--); //=> 4\n",
@@ -860,6 +819,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "NVuv7NOd_0ZE"
+      }
     },
     {
       "cell_type": "code",
@@ -1950,7 +1918,7 @@
       "cell_type": "code",
       "source": [
         "# シンボル型\n",
-        "# Ruby のシンボル的なことは、JavaScript や TypeScript では文字列を用いて解決します\n",
+        "# Ruby のシンボル的なことは、JavaScript や TypeScript では文字列を用いて解決する\n",
         "# 互換性のためにあるのであって、使わない\n",
         "%%writefile temp.ts\n",
         "const s1 = Symbol(\"foo\");\n",
@@ -1991,10 +1959,10 @@
       "cell_type": "code",
       "source": [
         "# オブジェクトリテラル\n",
-        "# 広く使われるデータシリアライズ形式に JSON があるのはご存知でしょう。\n",
-        "# JSON は多くのプログラミング言語で用いられていますが、JSON は JavaScript Object Notation の略で、\n",
-        "# JSON の由来は JavaScript のオブジェクトリテラルにあります。\n",
-        "# そして、JavaScript では JSON をそのままオブジェクトリテラルとして解釈できます。"
+        "# 広く使われるデータシリアライズ形式に JSON がある\n",
+        "# JSON は JavaScript Object Notation の略で、\n",
+        "# JSON の由来は JavaScript のオブジェクトリテラル\n",
+        "# JavaScript では JSON をそのままオブジェクトリテラルとして解釈できる"
       ],
       "metadata": {
         "id": "kxGrtiujjBJi"
