--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMZYMCQYgB1z4FRoXijnmAf",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO5mdBnlQexyOQl1ZGEFr0E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -825,7 +826,7 @@
         "# 文字列、数値変換\n",
         "# `Number()`、`String()`、`toString()`とか\n",
         "%%writefile temp.ts\n",
-        "import * as fs from \"fs\"; // require('fs') を省略して fs と書けるようになるがあまり使われないみたい\n",
+        "import * as fs from \"fs\";\n",
         "const inputs = fs.readFileSync(\"/dev/stdin\", \"utf8\");\n",
         "let line = inputs.split('\\n');\n",
         "let number = Number(line[0]);\n",
@@ -835,12 +836,12 @@
       ],
       "metadata": {
         "id": "poUWlVLIfxNt",
-        "outputId": "84468ac7-29d6-4ea3-acab-73f05b558f8f",
+        "outputId": "f40e2bca-5cf6-4ff1-cca6-69b5861dfcf5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -858,12 +859,12 @@
       ],
       "metadata": {
         "id": "yjT5sG7v_7ot",
-        "outputId": "cbbdf9ba-4367-4a5d-e463-34751faf974d",
+        "outputId": "140a786c-9f5b-413b-b80c-7a8f06c821aa",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,17 +885,17 @@
         "let args : string[] = input.trim().split(/[\\n\\s,;.]+/)\n",
         "let str = args[0]\n",
         "console.log(\"長さは \" + str.length) \n",
-        "console.log(\"最後の文字は \" + str[str.length - 1]) // str[-1] は使えないのでこうする\n",
+        "console.log(\"最後の文字は \" + str[str.length - 1]) // str[-1] は使えない\n",
         "console.log(\"z の位置は \" + str.indexOf(\"z\")) // ない時に -1 になる。と言うことはそのままでは真偽値には使えない"
       ],
       "metadata": {
         "id": "HY9vGBSlTX2V",
-        "outputId": "a17c9f72-ee83-4cff-93bb-960deda7ba22",
+        "outputId": "1f09848c-3d91-4e2b-cba6-471654b84c4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -912,12 +913,12 @@
       ],
       "metadata": {
         "id": "GzO9ZzoZTePW",
-        "outputId": "63ff3e3c-1669-4cfb-cf99-d9bde9ef2bfd",
+        "outputId": "4a3f2c61-c85c-4363-b330-fa3d4ec15f05",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +937,7 @@
         "# 文字列はクダブルクオート、シングルクオート、バックティックのどれを使うべきか\n",
         "# 基本的に \" ダブルクオートを使用する\n",
         "# 文字列の中に\"が含まれる場合は ' シングルクオートを使用する\n",
-        "# 文字列展開する必要があるときは ` バックティック(バッククオート)を使用する ${x} が使える"
+        "# 文字列展開する必要があるときは ` バックティック(バッククオート)を使用する"
       ],
       "metadata": {
         "id": "KebXDOANWqq3"
