--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO5mdBnlQexyOQl1ZGEFr0E",
+      "authorship_tag": "ABX9TyP5QSa9eMAjl5XGPGpAKCE0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -965,15 +965,6 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "NVuv7NOd_0ZE"
-      }
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "id": "eGIBg74tGV31",
@@ -984,6 +975,7 @@
       },
       "source": [
         "# 問題 クリスマスカード\n",
+        "# indexOf() を使って文字列 Christmas が入っている項だけを出力する\n",
         "%%writefile temp.ts\n",
         "let greetings = ['Happy Birthday!',\n",
         "    'Merry Christmas my love',\n",
@@ -1039,13 +1031,9 @@
       "source": [
         "# heredocument ヒアドキュメント\n",
         "%%writefile temp.ts\n",
-        "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
-        "const heredoc = `\n",
-        "秋の日の\n",
-        "秋の田の\n",
+        "const heredoc = `秋の日の\n",
         "ヴィオロンの\n",
-        "かりほの庵の\n",
-        "`;\n",
+        "かりほの庵の`;\n",
         "console.log(heredoc)\n",
         "let args : string[] = heredoc.trim().split(/[\\n\\s,;.]+/)\n",
         "console.log(args)"
@@ -1055,9 +1043,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r60b0Pgmgp4y",
-        "outputId": "b5677560-18d3-4f60-da59-0cb1be248b1f"
+        "outputId": "4bd55a4f-e007-4a90-ac4b-643b021ad24e"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1078,24 +1066,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Z4KhEV_KhXGA",
-        "outputId": "5e2cca34-2729-4010-e853-c9086662d441"
+        "outputId": "04074830-b119-4b87-9a54-3fba25723a8c"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\n",
             "秋の日の\n",
-            "秋の田の\n",
             "ヴィオロンの\n",
             "かりほの庵の\n",
-            "\n",
-            "[ \u001b[32m'秋の日の'\u001b[39m, \u001b[32m'秋の田の'\u001b[39m, \u001b[32m'ヴィオロンの'\u001b[39m, \u001b[32m'かりほの庵の'\u001b[39m ]\n"
+            "[ \u001b[32m'秋の日の'\u001b[39m, \u001b[32m'ヴィオロンの'\u001b[39m, \u001b[32m'かりほの庵の'\u001b[39m ]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "NVuv7NOd_0ZE"
+      }
     },
     {
       "cell_type": "code",
