Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOUf3b39yPgzEUesgvLZ3Z8",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOVf7l9rERegnAke7S0gaBK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +49,7 @@
       "metadata": {
         "id": "cvDmmwL1W8Wl"
       },
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -1203,15 +1204,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "NVuv7NOd_0ZE"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 問題 都市名 別解\n",
@@ -1246,7 +1238,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1269,7 +1261,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1282,6 +1274,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "NVuv7NOd_0ZE"
+      }
     },
     {
       "cell_type": "code",
@@ -1309,15 +1310,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "720fd7c9-5072-4eaf-ee9e-c43418dc9b47"
+        "outputId": "fae1d0b1-098f-438b-d0c7-7ee9d5e5cddf"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting temp.ts\n"
+            "Writing temp.ts\n"
           ]
         }
       ]
