Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN93Q1zD9aM6EL442yxdw5I",
+      "authorship_tag": "ABX9TyP2Qf4CVCe3IiiJ6Y5ekuFY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2692,15 +2692,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "NVuv7NOd_0ZE"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# AtCoder Beginners Selection\n",
@@ -2727,12 +2718,12 @@
       ],
       "metadata": {
         "id": "FBvwsDIbREPO",
-        "outputId": "ec53de4e-e34b-465e-d6ce-9c03da47fd14",
+        "outputId": "4e177bd2-0db8-4d18-b380-fe255da4af99",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -2752,12 +2743,12 @@
       ],
       "metadata": {
         "id": "WI8cy28cLMRE",
-        "outputId": "f5a1bf70-4b82-4482-9c60-0660e9884606",
+        "outputId": "b8d7fe30-bafb-4cfb-d621-b85a020062ce",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2780,16 +2771,17 @@
         "console.log(4 >> 1) //=> 2\n",
         "console.log(2 >> 1) //=> 1\n",
         "console.log(1 >> 1) //=> 0\n",
-        "console.log(7 >> 1) //=> 3"
+        "console.log(7 >> 1) //=> 3\n",
+        "console.log(7 << 1) //=> 111 => 1110 = 14"
       ],
       "metadata": {
         "id": "TXQd4cpiIL3J",
-        "outputId": "37660688-ef3d-4e47-ff83-685f27a06be4",
+        "outputId": "0a47b56c-ecc7-4419-8422-0147f1888a50",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -2807,12 +2799,12 @@
       ],
       "metadata": {
         "id": "fEYRxDNJILsh",
-        "outputId": "ab95cd9e-2279-4e9a-d6a2-ed9a9abf80b5",
+        "outputId": "8f299061-0a6c-4748-9b38-b1f596f03d04",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -2822,10 +2814,20 @@
             "\u001b[33m2\u001b[39m\n",
             "\u001b[33m1\u001b[39m\n",
             "\u001b[33m0\u001b[39m\n",
-            "\u001b[33m3\u001b[39m\n"
+            "\u001b[33m3\u001b[39m\n",
+            "\u001b[33m14\u001b[39m\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "NVuv7NOd_0ZE"
+      }
     },
     {
       "cell_type": "code",
