Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -6,7 +6,7 @@
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOAe2IShMa3aD6ndARaKmpS",
+      "authorship_tag": "ABX9TyMoHCGqcRtAaZ/CtPQV6QhM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2879,15 +2879,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "source": [
-        "# いまここ"
-      ],
-      "metadata": {
-        "id": "NVuv7NOd_0ZE"
-      }
-    },
-    {
       "cell_type": "code",
       "source": [
         "# 別解 問題 A - Placing Marbles \n",
@@ -2896,16 +2887,17 @@
         "const input : string = require('fs').readFileSync(\"/dev/stdin\", \"utf8\");\n",
         "let args : string[] = input.trim().split(/[\\n\\s,;.]+/)\n",
         "let arg = args[0].split('1')\n",
-        "console.log(arg.length - 1)"
+        "console.log(arg.length - 1)\n",
+        "console.log(arg)"
       ],
       "metadata": {
         "id": "7mpnbUJbHGD5",
-        "outputId": "da2c6d1e-e87c-4fe2-d67a-ae4cdc9c6616",
+        "outputId": "9594df41-ecda-4b6a-87cb-3cc295e8e5c8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -2920,26 +2912,43 @@
       "cell_type": "code",
       "source": [
         "!tsc temp.ts; echo 101 | node temp.js #=> 2\n",
-        "!tsc temp.ts; echo 000 | node temp.js #=> 0"
+        "!tsc temp.ts; echo 000 | node temp.js #=> 0\n",
+        "!tsc temp.ts; echo 101010 | node temp.js #=> 3\n",
+        "!tsc temp.ts; echo 0101010 | node temp.js #=> 3"
       ],
       "metadata": {
         "id": "2dk3rYUrHeP8",
-        "outputId": "9e9db43c-f7c4-4b30-b0a7-1a6e099f536e",
+        "outputId": "c8889429-c311-4288-df85-81a551975b88",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[33m2\u001b[39m\n",
-            "\u001b[33m0\u001b[39m\n"
+            "[ \u001b[32m''\u001b[39m, \u001b[32m'0'\u001b[39m, \u001b[32m''\u001b[39m ]\n",
+            "\u001b[33m0\u001b[39m\n",
+            "[ \u001b[32m'000'\u001b[39m ]\n",
+            "\u001b[33m3\u001b[39m\n",
+            "[ \u001b[32m''\u001b[39m, \u001b[32m'0'\u001b[39m, \u001b[32m'0'\u001b[39m, \u001b[32m'0'\u001b[39m ]\n",
+            "\u001b[33m3\u001b[39m\n",
+            "[ \u001b[32m'0'\u001b[39m, \u001b[32m'0'\u001b[39m, \u001b[32m'0'\u001b[39m, \u001b[32m'0'\u001b[39m ]\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# いまここ"
+      ],
+      "metadata": {
+        "id": "NVuv7NOd_0ZE"
+      }
     },
     {
       "cell_type": "code",
