Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO6VET6LkrSuddfRRz5Jk+V",
+      "authorship_tag": "ABX9TyOxlxPKPI+1sFbJayxDG38o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,11 +39,11 @@
     {
       "cell_type": "code",
       "source": [
-        "# typescript をインストールする。4.7.4 が入る。node は 14.16.0 が既に入っている\n",
+        "# typescript をインストールする。4.8.2 が入る。node は 14.16.0 が既に入っている\n",
+        "# !npm install --save-dev @types/node\n",
+        "# !npm install --save lodash\n",
         "%%capture\n",
-        "!npm install -g typescript\n",
-        "!npm install --save-dev @types/node\n",
-        "!npm install --save lodash"
+        "!npm install -g typescript"
       ],
       "metadata": {
         "id": "cvDmmwL1W8Wl"
@@ -59,18 +58,18 @@
       ],
       "metadata": {
         "id": "tLQ2WzZtpWcw",
-        "outputId": "08171ef0-9eb7-4c88-e0f8-71318e5c7a21",
+        "outputId": "3a2c2221-9aef-43a0-839f-b2498630b275",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Version 4.7.4\n"
+            "Version 4.8.2\n"
           ]
         }
       ]
@@ -106,12 +105,12 @@
       ],
       "metadata": {
         "id": "KruQn6rTcs4V",
-        "outputId": "e02e7790-531e-4c36-fc5a-7bf3cba48f76",
+        "outputId": "8199e20f-a065-4abb-de45-7c8d7dd4eb13",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,12 +128,12 @@
       ],
       "metadata": {
         "id": "D5uYgvndc8N1",
-        "outputId": "db1522ae-6c51-443d-eeae-3e350a949e7c",
+        "outputId": "8585c60d-10af-4c3a-a1d5-68594c7f12ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,12 +157,12 @@
       ],
       "metadata": {
         "id": "Sos8UKrxYG7d",
-        "outputId": "60bd16da-ee59-48ea-e6fb-60efefa130b2",
+        "outputId": "3d418039-f5f3-4ba6-fced-71b34db0dc4b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,12 +180,12 @@
       ],
       "metadata": {
         "id": "KMQ-v2w3YnRx",
-        "outputId": "20f77360-8e3f-4ef3-ccaa-75623d256570",
+        "outputId": "b4cf8c38-2279-444b-8885-7e51de89ece4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,12 +209,12 @@
       ],
       "metadata": {
         "id": "GT5a8voYofte",
-        "outputId": "88730d34-4337-4f43-8ec9-c6f7c11ff1da",
+        "outputId": "97c9f011-349f-473b-d8bd-3b7cf52a6a5a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,12 +233,12 @@
       ],
       "metadata": {
         "id": "9ouy2h5Bofpk",
-        "outputId": "28e1f906-787a-49de-e67b-5735655e55aa",
+        "outputId": "46eeaaa6-f09a-4227-bcd8-8b536947a8c9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -547,7 +546,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "56733d5c-daf9-42b4-9cda-17895a671017"
+        "outputId": "b8921093-e215-4a74-8175-360141e55103"
       },
       "source": [
         "# splice の使い方\n",
@@ -558,7 +557,7 @@
         "months.splice(4, 1, 'May'); // replaces 1 element at index 4\n",
         "console.log(months); // expected output: Array [\"Jan\", \"Feb\", \"March\", \"April\", \"May\"]"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,12 +575,12 @@
       ],
       "metadata": {
         "id": "xfHR11pD3zJN",
-        "outputId": "e19a5fe4-5c4f-4e09-856f-ec214c272b42",
+        "outputId": "3ffbd5f4-275f-430b-dea6-82c630a1b46b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,6 +588,78 @@
           "text": [
             "[ \u001b[32m'Jan'\u001b[39m, \u001b[32m'Feb'\u001b[39m, \u001b[32m'March'\u001b[39m, \u001b[32m'April'\u001b[39m, \u001b[32m'June'\u001b[39m ]\n",
             "[ \u001b[32m'Jan'\u001b[39m, \u001b[32m'Feb'\u001b[39m, \u001b[32m'March'\u001b[39m, \u001b[32m'April'\u001b[39m, \u001b[32m'May'\u001b[39m ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 実験\n",
+        "%%writefile temp.ts\n",
+        "const months = ['Jan', 'March', 'April', 'June'];\n",
+        "months.splice(5, 1, 'May'); //エラーになるか => ならない\n",
+        "console.log(months) //=> [ 'Jan', 'March', 'April', 'June', 'May' ]\n",
+        "months.splice(0);\n",
+        "console.log(months)\n",
+        "const word = \"hello world\";\n",
+        "console.log(word)\n",
+        "const word: string = \"hello typescript\"\n",
+        "console.log(word)"
+      ],
+      "metadata": {
+        "id": "DpiKwr4wV3jJ",
+        "outputId": "4c0a5566-1e21-4297-f3e6-ed832bcd255c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; node temp.js "
+      ],
+      "metadata": {
+        "id": "K1i2EwRxWC9D",
+        "outputId": "17be9399-81c4-4178-994c-158c629a88f9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[96mtemp.ts\u001b[0m:\u001b[93m6\u001b[0m:\u001b[93m7\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS2451: \u001b[0mCannot redeclare block-scoped variable 'word'.\n",
+            "\n",
+            "\u001b[7m6\u001b[0m const word = \"hello world\";\n",
+            "\u001b[7m \u001b[0m \u001b[91m      ~~~~\u001b[0m\n",
+            "\n",
+            "\u001b[96mtemp.ts\u001b[0m:\u001b[93m8\u001b[0m:\u001b[93m7\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS2451: \u001b[0mCannot redeclare block-scoped variable 'word'.\n",
+            "\n",
+            "\u001b[7m8\u001b[0m const word: string = \"hello typescript\"\n",
+            "\u001b[7m \u001b[0m \u001b[91m      ~~~~\u001b[0m\n",
+            "\n",
+            "\n",
+            "Found 2 errors in the same file, starting at: temp.ts\u001b[90m:6\u001b[0m\n",
+            "\n",
+            "[ \u001b[32m'Jan'\u001b[39m, \u001b[32m'March'\u001b[39m, \u001b[32m'April'\u001b[39m, \u001b[32m'June'\u001b[39m, \u001b[32m'May'\u001b[39m ]\n",
+            "[]\n",
+            "hello world\n",
+            "hello typescript\n"
           ]
         }
       ]
@@ -723,7 +794,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -746,7 +817,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -781,7 +852,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +875,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -834,7 +905,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +928,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5759,7 +5830,7 @@
         "    return 0;\n",
         "}\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
