Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTh9egHA9Bc2ZemiTamti0",
+      "authorship_tag": "ABX9TyPZFLSmmIQx20SL4bLLYNDT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,16 +79,19 @@
       "source": [
         "%%writefile temp.ts\n",
         "const values = {username: \"kkk\", age:39}\n",
-        "console.log({...values, [\"age\"]: 58})"
+        "console.log({...values, [\"age\"]: 58})\n",
+        "let newvalues = {...values}\n",
+        "newvalues[\"username\"]=\"ggg\"\n",
+        "console.log(newvalues);"
       ],
       "metadata": {
         "id": "jkFwwAqDIJpQ",
-        "outputId": "2515059c-db8f-4ec5-9b6b-7e19ce95226d",
+        "outputId": "adc4d1e3-9237-4613-f276-23e5ff342158",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,18 +109,19 @@
       ],
       "metadata": {
         "id": "YfU_iT1_IP40",
-        "outputId": "b632b2d0-28a2-4572-87ad-e8963a59727b",
+        "outputId": "298f8970-0e50-41cb-efb1-5c2a068a5194",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{ username: \u001b[32m'kkk'\u001b[39m, age: \u001b[33m58\u001b[39m }\n"
+            "{ username: \u001b[32m'kkk'\u001b[39m, age: \u001b[33m58\u001b[39m }\n",
+            "{ username: \u001b[32m'ggg'\u001b[39m, age: \u001b[33m39\u001b[39m }\n"
           ]
         }
       ]
