Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM4iqHE1u3svUpHi0NG7PiB",
+      "authorship_tag": "ABX9TyNxWK8W7knD6ly8557Ig6sc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,6 +77,58 @@
     {
       "cell_type": "code",
       "source": [
+        "# double tilde\n",
+        "%%writefile temp.ts\n",
+        "console.log(Math.floor(-3.5))\n",
+        "console.log(~~(-3.5))\n",
+        "console.log(Math.trunc(-3.5))"
+      ],
+      "metadata": {
+        "id": "sDYzQs4MJhYL",
+        "outputId": "8c039c3c-fdeb-41db-b1a2-52cbe2a79efe",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting temp.ts\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!tsc temp.ts; node temp.js"
+      ],
+      "metadata": {
+        "id": "LDOptjD0JhTl",
+        "outputId": "1568728d-22b5-426f-cd3a-9d6486fe1d55",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[33m-4\u001b[39m\n",
+            "\u001b[33m-3\u001b[39m\n",
+            "\u001b[33m-3\u001b[39m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# shuffle, randomize list , \n",
         "%%writefile temp.ts\n",
         "let arr1 = [\"a\", \"b\", \"c\", \"d\"];\n",
@@ -93,7 +145,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +168,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
