Colaboratory を使用して作成しました

--- a/ts_learntypescript.ipynb
+++ b/ts_learntypescript.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ts_learntypescript.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNxWK8W7knD6ly8557Ig6sc",
+      "authorship_tag": "ABX9TyMOw/qB/FFl/XhX0MI93DGn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,7 +77,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# double tilde\n",
+        "# double tilde > trunc と同じみたい\n",
         "%%writefile temp.ts\n",
         "console.log(Math.floor(-3.5))\n",
         "console.log(~~(-3.5))\n",
@@ -90,7 +90,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,7 +113,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
