Colaboratory を使用して作成しました

--- a/learnjavascript.ipynb
+++ b/learnjavascript.ipynb
@@ -6,7 +6,7 @@
       "name": "learnjavascript.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNyFyjayHCqWsNybXv3524P",
+      "authorship_tag": "ABX9TyNCSg5Zr65bgu8fM3dQPz5V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,42 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/kalz2q/mycolabnotebooks/blob/master/learnjavascript.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%html\n",
+        "<script>\n",
+        "const person = {\"kk\"};\n",
+        "person\n",
+        "</script>"
+      ],
+      "metadata": {
+        "id": "MNokmQKYkmrR",
+        "outputId": "ccaa6092-9494-46ca-f74c-56cec6778798",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<script>\n",
+              "const person = {\"kk\"};\n",
+              "person\n",
+              "</script>\n"
+            ]
+          },
+          "metadata": {}
+        }
       ]
     },
     {
@@ -122,7 +158,7 @@
         "console.log(\"\\n\");\n",
         "console.log(\"!!!\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2031,6 +2067,13 @@
       "source": [
         "# みんな数学が大好き\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "mMZQ8mAzjGRy"
+      }
     },
     {
       "cell_type": "markdown",
